added swagger readings
