# internal/handler/readings.go
@@ -9,6 +9,18 @@ import (
 )
 
 // Get readings for dht sensor of a set range
+// GetDhtReadings		godoc
+// @Summary				Lists all dht readings of deiveceId in range from - to and limit number of lines
+// @Tags				readings
+// @Produce				json
+// @Param				deviceId	path 	string	true	"device id"
+// @Param				from		query 	string	false	"time stamp start query (default 24h ago)"
+// @Param				to			query 	string	false	"time stamp stop query (default now)"
+// @Param				limit		query 	int		false	"max number of lines (default 500)"
+// @Success				200	{array}	domain.DhtReadings
+// @Failure				400	{string}	string	"input parameters not valid"
+// @Failure				500	{string}	string	"internal server error"
+// @Router				/readings/dht/{deviceId}	[get]
 func (h *Handler) GetDhtReadings(w http.ResponseWriter, r *http.Request) {
 	deviceId := chi.URLParam(r, "deviceId")
 
@@ -39,6 +51,15 @@ func (h *Handler) GetDhtReadings(w http.ResponseWriter, r *http.Request) {
 }
 
 // Get latest readings for dht sensor
+// GetDhtReadingLatest		godoc
+// @Summary				Returns latest dht reading
+// @Tags				readings
+// @Produce				json
+// @Param				deviceId	path 	string	true	"device id"
+// @Success				200	{object}	domain.DhtReadings
+// @Failure				404	{string}	string	"latest dht reading not found"
+// @Failure				500	{string}	string	"internal server error"
+// @Router				/readings/dht/{deviceId}/latest	[get]
 func (h *Handler) GetDhtReadingLatest(w http.ResponseWriter, r *http.Request) {
 	deviceId := chi.URLParam(r, "deviceId")
 
@@ -56,6 +77,18 @@ func (h *Handler) GetDhtReadingLatest(w http.ResponseWriter, r *http.Request) {
 }
 
 // Get readings for status sensor of a set range
+// GetStatusReadings		godoc
+// @Summary				Lists all status readings of deiveceId in range from - to and limit number of lines
+// @Tags				readings
+// @Produce				json
+// @Param				deviceId	path 	string	true	"device id"
+// @Param				from		query 	string	false	"time stamp start query (default 24h ago)"
+// @Param				to			query 	string	false	"time stamp stop query (default now)"
+// @Param				limit		query 	int		false	"max number of lines (default 500)"
+// @Success				200	{array}	domain.StatusReadings
+// @Failure				400	{string}	string	"input parameters not valid"
+// @Failure				500	{string}	string	"internal server error"
+// @Router				/readings/status/{deviceId}	[get]
 func (h *Handler) GetStatusReadings(w http.ResponseWriter, r *http.Request) {
 	deviceId := chi.URLParam(r, "deviceId")
 
@@ -86,6 +119,15 @@ func (h *Handler) GetStatusReadings(w http.ResponseWriter, r *http.Request) {
 }
 
 // Get latest readings for status sensor
+// GetStatusReadingLatest		godoc
+// @Summary				Returns latest status reading
+// @Tags				readings
+// @Produce				json
+// @Param				deviceId	path 	string	true	"device id"
+// @Success				200	{object}	domain.StatusReadings
+// @Failure				404	{string}	string	"latest status reading not found"
+// @Failure				500	{string}	string	"internal server error"
+// @Router				/readings/status/{deviceId}/latest	[get]
 func (h *Handler) GetStatusReadingLatest(w http.ResponseWriter, r *http.Request) {
 	deviceId := chi.URLParam(r, "deviceId")
 
